更新语言包

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -35,7 +35,7 @@
   <string name="Add_Device_Scan_QR">Scansiona QR Code</string>
   <string name="Added_successfully">Aggiunto con successo</string>
   <string name="Alarm_WeChat">Ricevi il messaggio di allarme con Wechat</string>
-  <string name="Alarm_WeChat_NoBindTips">Utilizzando questa funzione deve binding e&#8211;mail prima.</string>
+  <string name="Alarm_WeChat_NoBindTips">Utilizzando questa funzione deve binding e&#45;mail prima.</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -48,20 +48,20 @@
   <string name="BLUE_BLINKING">Accettarsi che l\'indicatore WIFI lampeggia in color blu. In caso contrario premere il pulsante WIFI per circa 3 secondi</string>
   <string name="Button_Add">Aggiungere</string>
   <string name="Button_No">No</string>
-  <string name="Button_ReObtain">Re&#8211;send</string>
+  <string name="Button_ReObtain">Re&#45;send</string>
   <string name="Button_Sure">Sicuro</string>
   <string name="Button_Yes">Sì</string>
   <string name="CALL_CAMERA_NAME">Doorbell</string>
   <string name="CAMERA">Camera</string>
   <string name="CANCEL">Annulla</string>
   <string name="CARRY_ON">Continuare</string>
-  <string name="CHANGE_EMAIL">Cambio E&#8211;mail</string>
+  <string name="CHANGE_EMAIL">Cambio E&#45;mail</string>
   <string name="CHANGE_PHONE_NUM">Cambia il numero di telefono</string>
   <string name="CHANGE_PWD">Cambia password</string>
   <string name="CHARGING">Ricarica</string>
   <string name="CHOOSE">Scegli</string>
   <string name="CHOOSE_COVER">Scegli copertina</string>
-  <string name="CHOOSE_NETWORK">Impostazione &#8211; Scegli una rete</string>
+  <string name="CHOOSE_NETWORK">Impostazione &#45; Scegli una rete</string>
   <string name="CHOOSE_PHOTOS">Scegli da immagini</string>
   <string name="CHOOSE_PIC">Scatta o scegli dalle foto</string>
   <string name="CHOOSE_WIFI">Scegli una rete</string>
@@ -116,9 +116,9 @@
   <string name="DEVICES_TITLE_2">Trova dispositivo</string>
   <string name="DEVICES_TITLE_3">Imposta WiFi</string>
   <string name="DEVICES_TITLE_4">Aggiungere</string>
-  <string name="DEVICE_2G_ONLINE">2G On&#8211;line</string>
-  <string name="DEVICE_3G_ONLINE">3G On&#8211;line</string>
-  <string name="DEVICE_4G_ONLINE">4G On&#8211;line</string>
+  <string name="DEVICE_2G_ONLINE">2G On&#45;line</string>
+  <string name="DEVICE_3G_ONLINE">3G On&#45;line</string>
+  <string name="DEVICE_4G_ONLINE">4G On&#45;line</string>
   <string name="DEVICE_ADDING">Aggiunta dispositivo, attendere per favore&#8230;</string>
   <string name="DEVICE_BLUETOOTH_ONLINE">Connessione Bluetooth</string>
   <string name="DEVICE_CONNECTING">Il dispositivo si collega a Internet</string>
@@ -133,7 +133,7 @@
   <string name="DEVICE_OFFLINE7">Collegare i punti caldi dell\'apparecchiatura</string>
   <string name="DEVICE_UPGRADE">Aggiornamento software dispositivo</string>
   <string name="DEVICE_UPGRADE_TIPS">Il dispositivo deve essere rimbalzo per aggiornare il software.</string>
-  <string name="DEVICE_WIFI_ONLINE">WiFi On&#8211;line</string>
+  <string name="DEVICE_WIFI_ONLINE">WiFi On&#45;line</string>
   <string name="DEViCE_NAME">Inserire nome dispositivo</string>
   <string name="DIRECTION_180">Inversione (ruota 180°)</string>
   <string name="DIRECTION_NORMAL">Normale</string>
@@ -207,11 +207,11 @@
   <string name="EFAMILY_RELEVANCE_ALARE">Se \'%1$s\' è stato rimosso, \'%2$s\' non riceverai nessuna chiamata.</string>
   <string name="EFAMILY_RELEVANCE_DOOR">Connessione con campanello</string>
   <string name="EFAMILY_VIDEOCALLING1">Videochiamare&#8230;</string>
-  <string name="EMAIL">E&#8211;mail</string>
-  <string name="EMAIL_1">E&#8211;mail</string>
-  <string name="EMAIL_2">E&#8211;mail non valido</string>
+  <string name="EMAIL">E&#45;mail</string>
+  <string name="EMAIL_1">E&#45;mail</string>
+  <string name="EMAIL_2">E&#45;mail non valido</string>
   <string name="EMAIL_RESET_PWD">Email inviata a %s, cliccare sul link nell\'email per resettare la password</string>
-  <string name="EMAIL_SIGNUP">E&#8211;mail</string>
+  <string name="EMAIL_SIGNUP">E&#45;mail</string>
   <string name="END_TALKBACK">Chiudi citofono</string>
   <string name="ENTER_CODE">Codice Autorizzazione</string>
   <string name="ENTER_PWD">Conferma la nuova password</string>
@@ -328,6 +328,7 @@
   <string name="MAGNETISM_ON_PUSH">%s è aperto</string>
   <string name="MESSAGE">Messaggi</string>
   <string name="MINUTE">M</string>
+  <string name="MINUTE_Cloud">minuti</string>
   <string name="MOBILE_DATA">rete dati mobile</string>
   <string name="MOBILE_TIPS">Quando ON, il dispositivo utilizza preferibilmente la rete WiFi</string>
   <string name="MODEL">Modello</string>
@@ -388,9 +389,10 @@
   <string name="No_Network_Connection">Nessuna connessione di rete, si prega di attivare la rete innanzitutto</string>
   <string name="Nov">Nov.</string>
   <string name="OFF">Spento</string>
-  <string name="OFFLINE_ERR">Dispositivo off&#8211;line</string>
+  <string name="OFFLINE_ERR">Dispositivo off&#45;line</string>
   <string name="OFFLINE_ERR_1">Non collegato con internet</string>
-  <string name="OFF_LINE">Off&#8211;line</string>
+  <string name="OFFLINE_EXPLAIN">Offline</string>
+  <string name="OFF_LINE">Off&#45;line</string>
   <string name="OK">OK</string>
   <string name="ON">Acceso</string>
   <string name="OPEN">Aperto</string>
@@ -403,7 +405,7 @@
   <string name="PASSWORD">Password</string>
   <string name="PASSWORD_BIT">Password</string>
   <string name="PASSWORD_LESSTHAN_SIX">Password errata</string>
-  <string name="PHONE_EMAIL">E&#8211;mail</string>
+  <string name="PHONE_EMAIL">E&#45;mail</string>
   <string name="PHONE_NUMBER">Numero telefonico</string>
   <string name="PHONE_NUMBER_1">Numero telefonico</string>
   <string name="PHONE_NUMBER_2">Numero di telefono non valido</string>
@@ -457,6 +459,7 @@
   <string name="REPEAT">Ripetere ogni settimana</string>
   <string name="REPEAT_PLAY">Ripeti</string>
   <string name="REPEAT_TIME">Secondi</string>
+  <string name="REPEAT_TIME_ALARM">secondo</string>
   <string name="RESET_PWD">Resettare la password</string>
   <string name="RET_EALIAS_EXIST">Nome già esistente</string>
   <string name="RET_EBINDCID_IN_BINDING">Dispositivo già collegato</string>
@@ -539,6 +542,7 @@
   <string name="SECOND">%d secondi</string>
   <string name="SECURE">Protezione</string>
   <string name="SECURE_ALARM_CLOSE">Quando il sistema di movimento è disattivato, non verrà registrato nessun video.</string>
+  <string name="SECURE_Interval_Alarm">Intervallo Allarme</string>
   <string name="SECURE_SENSITIVITY">Sensibilità</string>
   <string name="SECURE_TYPE">Rilevatore di movimento</string>
   <string name="SEE_HELP">Aiuto</string>
@@ -566,10 +570,10 @@
   <string name="SET_PROFILE_PHOTO">Immagine Profilo</string>
   <string name="SET_PWD">Imposta Password</string>
   <string name="SHARE">Condividi</string>
-  <string name="SHARE_ACCOUNT">E&#8211;Mail</string>
+  <string name="SHARE_ACCOUNT">E&#45;Mail</string>
   <string name="SHARE_DOWNLOAD">Scarica la foto originale e poi condividi</string>
   <string name="SHARE_ERR">Puoi condividere fino a 5 amici</string>
-  <string name="SHARE_E_MAIL">E&#8211;Mail</string>
+  <string name="SHARE_E_MAIL">E&#45;Mail</string>
   <string name="SHARE_FROM">Condiviso %s</string>
   <string name="SHARE_NAME">Condiviso</string>
   <string name="SIGN_UP">Iscriviti</string>
@@ -614,7 +618,7 @@
   <string name="Start_Hotspot_Prompt">Prima di aprire, assicurarsi che il telefono sia connesso alla rete WiFi \"%s\"</string>
   <string name="Start_Success">Avviare il successo</string>
   <string name="Start_instructions">Aprire le istruzioni</string>
-  <string name="Start_instructions_A">Nei Conti ufficiali di WeChat nell\'e&#8211;mail di Clever Dog, è possibile aprire questa funzione.</string>
+  <string name="Start_instructions_A">Nei Conti ufficiali di WeChat nell\'e&#45;mail di Clever Dog, è possibile aprire questa funzione.</string>
   <string name="Start_instructions_B">Procedere come segue:</string>
   <string name="Start_instructions_C">1. Si prega di prestare attenzione al numero pubblico WeChat \"加菲狗官微服务\"</string>
   <string name="Start_instructions_D">Metodo 1: fare clic sul WeChat nell\'angolo in alto a destra della casella \"+\"> Aggiungi contatti> Account ufficiali, cercare \"加菲狗官微服务\" e quindi interessati.</string>
@@ -635,7 +639,7 @@
   <string name="THU_2">Gio</string>
   <string name="THU_Hisvideo_Timeselector">Gio</string>
   <string name="TIME">Orario</string>
-  <string name="TIMEOUT_TRY_AGIN">Attendere&#8211;Timeout/riprova per favore</string>
+  <string name="TIMEOUT_TRY_AGIN">Attendere&#45;Timeout/riprova per favore</string>
   <string name="TIMEZONE_CHOOSE">Fuso orario</string>
   <string name="TIMEZONE_INFO">Cambiando l\'orario avverrano dei cambiamenti all\'orario dei filmati</string>
   <string name="TIPS">Indicazioni</string>
@@ -826,7 +830,7 @@
   <string name="Tap1_Update">Aggiornare</string>
   <string name="Tap1_UpdateFirmwareTips">Aggiornare inizierà a breve, si prega di accertarsi che il cellulare e il dispositivo si connettono con la stessa WIFI</string>
   <string name="Tap1_Update_Electricity">La potenza del dispositivo è inferiore al 30%, non riesce a aggiornare, si prega di ricaricare completamente prima e poi riprovare.</string>
-  <string name="Tap1_Update_Precautions">L\'aggiornamento richiede circa 4&#8211;5 minuti, si prega di non spegnere l\'elettricità o la rete durante il processo di aggiornamento.</string>
+  <string name="Tap1_Update_Precautions">L\'aggiornamento richiede circa 4&#45;5 minuti, si prega di non spegnere l\'elettricità o la rete durante il processo di aggiornamento.</string>
   <string name="Tap1_device_deleted">Il dispositivo è stato rimosso</string>
   <string name="Tap1_iHome_Associate">Collegato</string>
   <string name="Tap1_iHome_Associated">Associated</string>
@@ -894,7 +898,7 @@
   <string name="Tap3_Friends_DeleteFriends">Cancello ?</string>
   <string name="Tap3_Friends_Details">Dettagli</string>
   <string name="Tap3_Friends_Myaccount">Il mio account</string>
-  <string name="Tap3_Friends_NoBindTips">Utilizzando questa funzione deve binding e&#8211;mail prima.</string>
+  <string name="Tap3_Friends_NoBindTips">Utilizzando questa funzione deve binding e&#45;mail prima.</string>
   <string name="Tap3_Friends_Share">Condividi con%s</string>
   <string name="Tap3_Friends_Tips">Aggiungere amici ci rende più vicini</string>
   <string name="Tap3_Friends_UserInfo">Informazione personale</string>
@@ -936,7 +940,7 @@
   <string name="Tap3_ShareDevice_Tips">Questo dispositivo non può essere condiviso con nessun altro utente</string>
   <string name="Tap3_ShareDevice_ToContacts">Condividi con i contatti</string>
   <string name="Tap3_ShareDevice_UnshareTips">Unshare?</string>
-  <string name="Tap3_Share_NoBindTips">Utilizzando questa funzione deve binding e&#8211;mail prima.</string>
+  <string name="Tap3_Share_NoBindTips">Utilizzando questa funzione deve binding e&#45;mail prima.</string>
   <string name="Tap3_TitleName">Mi</string>
   <string name="Tap3_TitleName_Notice">Notifiche</string>
   <string name="Tap3_Uploading">Caricamento&#8230;</string>
@@ -957,7 +961,6 @@
   <string name="Tips_Device_TimeoutRetry">Timeout, riprovare</string>
   <string name="Tips_ShortVideo">Premere a lungo per registrare un breve video</string>
   <string name="Tips_SureDelete">Procedo alla cancellazione?</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">Nessuna reazione, riprova per favore</string>
   <string name="UPDATE_FAIL">Impossibile collegare la macchina fotografica, riprova per favore</string>
   <string name="UPDATING_BUTTON">Aggiornamento</string>
@@ -973,6 +976,7 @@
   <string name="VIDEO_FirmwareUpdating">Aggiornamento firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">Sto caricando</string>
   <string name="VIDEO_SD_DESC">L\'SD card deve essere inizializzata per memorizzare video.</string>
+  <string name="Video_expired">Il video non esiste, forse è scaduto</string>
   <string name="WARN_TIME">Tempo d\'avvertimento</string>
   <string name="WEB">Sito ufficiale Clever Dog</string>
   <string name="WED">Mercoledi</string>
@@ -998,13 +1002,13 @@
   <string name="WIFI_OFF">Il WIFI del tuo cellulare è spento</string>
   <string name="WIFI_PWD">Password:</string>
   <string name="WIFI_PWD_1">Password:</string>
-  <string name="WIFI_SET_2">1.Accettarsi che l\'indicatore WiFi lampeggia in colore blu, in caso contrario premere il pulsante WiFi per ca. 3 secondi \n 2.Nelle Impostazioni &#8211; WLAN , scegli \'%s\' usa sul tuo iPhone</string>
-  <string name="WIFI_SET_3">Andare in \"Settings\"&#8211;>\"WLAN\",scegliere \"DOG&#8211;**&#8211;******\" collegare il telefono, Password è 11111111</string>
-  <string name="WIFI_SET_3_1">Andare in \"Settings\"&#8211;>\"WLAN\",scegliere \"DOG&#8211;ML&#8211;******\" collegare il telefono,password è 11111111</string>
+  <string name="WIFI_SET_2">1.Accettarsi che l\'indicatore WiFi lampeggia in colore blu, in caso contrario premere il pulsante WiFi per ca. 3 secondi \n 2.Nelle Impostazioni &#45; WLAN , scegli \'%s\' usa sul tuo iPhone</string>
+  <string name="WIFI_SET_3">Andare in \"Settings\"&#45;>\"WLAN\",scegliere \"DOG&#45;**&#45;******\" collegare il telefono, Password è 11111111</string>
+  <string name="WIFI_SET_3_1">Andare in \"Settings\"&#45;>\"WLAN\",scegliere \"DOG&#45;ML&#45;******\" collegare il telefono,password è 11111111</string>
   <string name="WIFI_SET_4">Tornare a %s</string>
   <string name="WIFI_SET_5GTIPS">Nota: il segnale WiFi 5Ghz non è ancora supportato</string>
-  <string name="WIFI_SET_RS">Andare in \"Settings\"&#8211;>\"WLAN\",scegliere \"RS&#8211;CAM&#8211;******\" collegare il telefono,password è 11111111</string>
-  <string name="WIFI_SET_VER">Andare in \"Settings\"&#8211;>\"WLAN\",scegliere \"%s\" collegare il telefono,password è 11111111</string>
+  <string name="WIFI_SET_RS">Andare in \"Settings\"&#45;>\"WLAN\",scegliere \"RS&#45;CAM&#45;******\" collegare il telefono,password è 11111111</string>
+  <string name="WIFI_SET_VER">Andare in \"Settings\"&#45;>\"WLAN\",scegliere \"%s\" collegare il telefono,password è 11111111</string>
   <string name="WONDER_TODAY_H_M">Oggi HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Ieri HH:mm</string>
   <string name="WeChat">WeChat</string>
@@ -1035,7 +1039,7 @@
   <string name="connecting_ap">Connessione in corso&#8230;</string>
   <string name="contacts_auth">Contatti</string>
   <string name="copy">Copia</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005&#45;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s \n Può essere un numero di telefono, tu puoi:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -1058,7 +1062,7 @@
   <string name="please_choose_wifi">Scegli una rete WIFI per favore</string>
   <string name="receive_new_news">Messaggi ricevuti %s</string>
   <string name="rename">Modifica nome</string>
-  <string name="service_phonenum">+86 400&#8211;716&#8211;3232</string>
+  <string name="service_phonenum">+86 400&#45;716&#45;3232</string>
   <string name="set_failed">Impossibile impostare</string>
   <string name="setwifi_check">Connettere \"%s\" per effettuare la configurazione.</string>
   <string name="share_content">Questa APP è ottima, provala!</string>
