--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -35,7 +35,7 @@
   <string name="Add_Device_Scan_QR">QR kodu tara</string>
   <string name="Added_successfully">Başarıyla bind</string>
   <string name="Alarm_WeChat">WeChet üzerinden alarm</string>
-  <string name="Alarm_WeChat_NoBindTips">Bu işlevi kullanmak, önce e&#8211;postayı bağlamak zorundadır.</string>
+  <string name="Alarm_WeChat_NoBindTips">Bu işlevi kullanmak, önce e&#45;postayı bağlamak zorundadır.</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">Back</string>
@@ -55,13 +55,13 @@
   <string name="CAMERA">Kamera</string>
   <string name="CANCEL">İptal et</string>
   <string name="CARRY_ON">Devam et</string>
-  <string name="CHANGE_EMAIL">E&#8211;posta değiştir</string>
+  <string name="CHANGE_EMAIL">E&#45;posta değiştir</string>
   <string name="CHANGE_PHONE_NUM">Telefon numarası değiştir</string>
   <string name="CHANGE_PWD">Şifre değiştir</string>
   <string name="CHARGING">Şarj oluyor</string>
   <string name="CHOOSE">Seç</string>
   <string name="CHOOSE_COVER">Kapak seç</string>
-  <string name="CHOOSE_NETWORK">Ayarlamalar &#8211; Bir ağ seç</string>
+  <string name="CHOOSE_NETWORK">Ayarlamalar &#45; Bir ağ seç</string>
   <string name="CHOOSE_PHOTOS">Fotoğraflardan seç</string>
   <string name="CHOOSE_PIC">Kullanıcı tanımlı</string>
   <string name="CHOOSE_WIFI">Bir ağ seç</string>
@@ -207,11 +207,11 @@
   <string name="EFAMILY_RELEVANCE_ALARE">%1$s ı kaldır，ondan sonra %2$s herhangi bir çağrı mesajı almayacaktır.</string>
   <string name="EFAMILY_RELEVANCE_DOOR">Bağlı kapı zili</string>
   <string name="EFAMILY_VIDEOCALLING1">Arıyor&#8230;</string>
-  <string name="EMAIL">E&#8211;posta</string>
-  <string name="EMAIL_1">E&#8211;posta</string>
-  <string name="EMAIL_2">Geçersiz E&#8211;posta</string>
-  <string name="EMAIL_RESET_PWD">Zaten %s ye e&#8211;posta gönderildi, şifreyi sıfırlamak için lütfen epostadaki bağlantıya tıklayınız</string>
-  <string name="EMAIL_SIGNUP">E&#8211;mail</string>
+  <string name="EMAIL">E&#45;posta</string>
+  <string name="EMAIL_1">E&#45;posta</string>
+  <string name="EMAIL_2">Geçersiz E&#45;posta</string>
+  <string name="EMAIL_RESET_PWD">Zaten %s ye e&#45;posta gönderildi, şifreyi sıfırlamak için lütfen epostadaki bağlantıya tıklayınız</string>
+  <string name="EMAIL_SIGNUP">E&#45;mail</string>
   <string name="END_TALKBACK">Karşılıklı konuşma sonu</string>
   <string name="ENTER_CODE">Yetki kodu</string>
   <string name="ENTER_PWD">Yeni şifreyi onayla</string>
@@ -277,8 +277,8 @@
   <string name="IMAGE_ERR">Yükleme başarısız, resim çok büyük</string>
   <string name="INVALID_ACCOUNT">Geçersiz hesap</string>
   <string name="INVALID_CODE">Geçersiz kod</string>
-  <string name="IN_APP_SOUND">UYG&#8211;içi Alarm sesi</string>
-  <string name="IN_APP_VIBRATE">UYG&#8211;içi Titreşim</string>
+  <string name="IN_APP_SOUND">UYG&#45;içi Alarm sesi</string>
+  <string name="IN_APP_VIBRATE">UYG&#45;içi Titreşim</string>
   <string name="IP_Address">IP adresi</string>
   <string name="I_KNOW">TAMAM</string>
   <string name="Instructions_Sent">Talimatlar gönderildi</string>
@@ -304,7 +304,7 @@
   <string name="LIGTH_LABEL_2_2">Mavi ışık, elektrik var</string>
   <string name="LIVE_DATA">Hücresel kullanım için lütfen veri kullanımınızı not edin</string>
   <string name="LOADING">Yükleniyor&#8230;</string>
-  <string name="LOCAL_NOTIFICATION_AndroidMSG">Phone\'nunuzda \"Ayarlamalar&#8211;Bildirimlar\" aracılığı ile %s i bulun ve Bildirimler i açın</string>
+  <string name="LOCAL_NOTIFICATION_AndroidMSG">Phone\'nunuzda \"Ayarlamalar&#45;Bildirimlar\" aracılığı ile %s i bulun ve Bildirimler i açın</string>
   <string name="LOCATION">Yer:</string>
   <string name="LOCATION_1">Ad</string>
   <string name="LOCATION_NAME">Yer:</string>
@@ -328,6 +328,7 @@
   <string name="MAGNETISM_ON_PUSH">%s Açık</string>
   <string name="MESSAGE">Mesajlar</string>
   <string name="MINUTE">D</string>
+  <string name="MINUTE_Cloud">dakika</string>
   <string name="MOBILE_DATA">Mobil veri ağı</string>
   <string name="MOBILE_TIPS">Bu fonksiyon açıkken WiFi bağlantı kullanmaya tercihen cihaz, mobil veri kullanacaktır.</string>
   <string name="MODEL">Model</string>
@@ -390,6 +391,7 @@
   <string name="OFF">Kapalı</string>
   <string name="OFFLINE_ERR">Cihaz çevrimdışı</string>
   <string name="OFFLINE_ERR_1">Internete bağlı değil</string>
+  <string name="OFFLINE_EXPLAIN">Çevrimdışı</string>
   <string name="OFF_LINE">Çevrim dışı</string>
   <string name="OK">TAMAM</string>
   <string name="ON">Açık</string>
@@ -403,7 +405,7 @@
   <string name="PASSWORD">Şifre</string>
   <string name="PASSWORD_BIT">Yeni şifre</string>
   <string name="PASSWORD_LESSTHAN_SIX">Lütfen 6 şifrenin üstünde giriş yapın</string>
-  <string name="PHONE_EMAIL">E&#8211;posta</string>
+  <string name="PHONE_EMAIL">E&#45;posta</string>
   <string name="PHONE_NUMBER">Telefon numarası</string>
   <string name="PHONE_NUMBER_1">Telefon numarası</string>
   <string name="PHONE_NUMBER_2">Geçersiz telefon numarası</string>
@@ -457,6 +459,7 @@
   <string name="REPEAT">Haftalık tekrarla</string>
   <string name="REPEAT_PLAY">Tekrarla</string>
   <string name="REPEAT_TIME">Saniye</string>
+  <string name="REPEAT_TIME_ALARM">saniye</string>
   <string name="RESET_PWD">Şifreyi sıfırla</string>
   <string name="RET_EALIAS_EXIST">Ad zaten mevcut</string>
   <string name="RET_EBINDCID_IN_BINDING">CID zaten bağlı</string>
@@ -468,7 +471,7 @@
   <string name="RET_ECID_UNBIND_RETRY_lOGIN">CID bağlı değil, lütfen tekrar giriş yapın</string>
   <string name="RET_ECID_UNENABLE">CID izinsiz</string>
   <string name="RET_ECID_USEUP">CID süresi bitmiş</string>
-  <string name="RET_EEDITUSERINFO_EMAIL">E&#8211;posta kullanıldı.</string>
+  <string name="RET_EEDITUSERINFO_EMAIL">E&#45;posta kullanıldı.</string>
   <string name="RET_EEDITUSERINFO_SMS_PHONE">Telefon kullanıldı.</string>
   <string name="RET_EFORGETPASS_ACCOUNT_NOT_EXIST">Bu hesap kayıtlı değil</string>
   <string name="RET_EISBIND_BYOTHER">CID başkası tarafından zaten bağlı</string>
@@ -539,6 +542,7 @@
   <string name="SECOND">%d Saniye</string>
   <string name="SECURE">Koruma</string>
   <string name="SECURE_ALARM_CLOSE">\"Algılama anormal\" i kurdunuz, \"Hareket Algılama\" yı kapattığınızda video kaydını durduracaktır</string>
+  <string name="SECURE_Interval_Alarm">Aralık Alarmı</string>
   <string name="SECURE_SENSITIVITY">Hassasiyet</string>
   <string name="SECURE_TYPE">Hareket Algılama</string>
   <string name="SEE_HELP">Yardım</string>
@@ -566,10 +570,10 @@
   <string name="SET_PROFILE_PHOTO">Profil</string>
   <string name="SET_PWD">Şifre</string>
   <string name="SHARE">Paylaş</string>
-  <string name="SHARE_ACCOUNT">E&#8211;posta</string>
+  <string name="SHARE_ACCOUNT">E&#45;posta</string>
   <string name="SHARE_DOWNLOAD">Lütfen orijinal fotoğrafı indirin ve ardından paylaşın</string>
   <string name="SHARE_ERR">Sadece 5 arkadaşla paylaş</string>
-  <string name="SHARE_E_MAIL">E&#8211;posta</string>
+  <string name="SHARE_E_MAIL">E&#45;posta</string>
   <string name="SHARE_FROM">%s paylaşıldı</string>
   <string name="SHARE_NAME">Paylaşıldı</string>
   <string name="SIGN_UP">Kaydol</string>
@@ -614,7 +618,7 @@
   <string name="Start_Hotspot_Prompt">Açmadan önce telefonun \"%s\" WiFi şebekesine bağlı olduğundan emin olun</string>
   <string name="Start_Success">Başarıya başlayın</string>
   <string name="Start_instructions">Talimatları aç</string>
-  <string name="Start_instructions_A">Clever Dog e&#8211;postasını bağlayan WeChat Resmi Hesaplarında bu işlevi açabilirsiniz.</string>
+  <string name="Start_instructions_A">Clever Dog e&#45;postasını bağlayan WeChat Resmi Hesaplarında bu işlevi açabilirsiniz.</string>
   <string name="Start_instructions_B">Aşağıdakileri yapın:</string>
   <string name="Start_instructions_C">1. Lütfen WeChat genel numarasına \"加菲狗官微服务\" na dikkat edin.</string>
   <string name="Start_instructions_D">Yöntem 1: \"+\"> Rehber Ekle> Resmi Hesaplar\'ın sağ üst köşesindeki WeChat\'ı tıklayın, ardından \"加菲狗官微服务\" arar ve ardından endişe duyar.</string>
@@ -622,7 +626,7 @@
   <string name="Start_instructions_F">2. Hesap bağlayın</string>
   <string name="Start_instructions_G">Dikkat \"加菲狗官微服务\" Resmi Hesaplar, ana sayfaya girin, hizmetin menü çubuğuna tıklayın, cilt hesabı seçin.</string>
   <string name="Start_instructions_H">Hesabı bağla</string>
-  <string name="Start_instructions_I">Lütfen şifreyi unuttum gibi bağlamak için Zeki köpek e&#8211;posta hesabını giriniz, lütfen Zeki köpek müşterisine geri dönün.</string>
+  <string name="Start_instructions_I">Lütfen şifreyi unuttum gibi bağlamak için Zeki köpek e&#45;posta hesabını giriniz, lütfen Zeki köpek müşterisine geri dönün.</string>
   <string name="Switch_Mode">Çekim içeriğini görüntülemek için lütfen doğrudan moda geçin</string>
   <string name="Switch_Mode_Pop">Lütfen geçerli şebeke çekim içeriğini doğrudan moda geçirin</string>
   <string name="Switch_Off">Her zaman kapalı</string>
@@ -635,7 +639,7 @@
   <string name="THU_2">Perşembe</string>
   <string name="THU_Hisvideo_Timeselector">Per</string>
   <string name="TIME">Zaman</string>
-  <string name="TIMEOUT_TRY_AGIN">Bekleme&#8211;zamanaşımı \n lütfen tekrar deneyin</string>
+  <string name="TIMEOUT_TRY_AGIN">Bekleme&#45;zamanaşımı \n lütfen tekrar deneyin</string>
   <string name="TIMEZONE_CHOOSE">Zaman bölgesi</string>
   <string name="TIMEZONE_INFO">Zaman bölgesinin değişmesi video zamanında değişikliğe sebep olabilir</string>
   <string name="TIPS">İpuçları</string>
@@ -647,9 +651,9 @@
   <string name="TUE_2">Salı</string>
   <string name="TUE_Hisvideo_Timeselector">Sal</string>
   <string name="TURN_ON_PROTECTION">Güvenlik Koruması açıkken hareket algılama otomatik olarak açılacaktır ve zaman aralığı ayarlamasına göre alarmlar gönderecektir.</string>
-  <string name="Tap0_AlreadyEmailed">Için zaten e&#8211;postayla gönderildi</string>
+  <string name="Tap0_AlreadyEmailed">Için zaten e&#45;postayla gönderildi</string>
   <string name="Tap0_Authorizationfailed">Yetki başarısız, lütfen tekrar deneyiniz</string>
-  <string name="Tap0_BindEmail">E&#8211;posta adresinizi bağlayın</string>
+  <string name="Tap0_BindEmail">E&#45;posta adresinizi bağlayın</string>
   <string name="Tap0_BindPhoneNo">Cep telefonunuzu bağlayın</string>
   <string name="Tap0_BindTips">Giriş için bağlanın veya yeniden şifre alın.</string>
   <string name="Tap0_Click_ActivateAccount">Hesabınızı etkinleştirmek için lütfen bağlantıyı tıklayın.</string>
@@ -657,14 +661,14 @@
   <string name="Tap0_Login_NoInstalled">Kurulu %s yok</string>
   <string name="Tap0_Register_VerificationCode">Onay kodunu giriniz</string>
   <string name="Tap0_WelcomeTourist">Bir göz atın.</string>
-  <string name="Tap0_enterphoneoremail">Cep telefonu numaranızı veya e&#8211;posta adresinizi girin</string>
+  <string name="Tap0_enterphoneoremail">Cep telefonu numaranızı veya e&#45;posta adresinizi girin</string>
   <string name="Tap0_invaildcode">Geçersiz kod</string>
   <string name="Tap0_register">Kayıt</string>
   <string name="Tap0_register_EmailVerification">Eposta Doğrulama</string>
   <string name="Tap0_register_GoToLogin">Giriş yap</string>
   <string name="Tap0_register_SendEmail">Tekrar gönderin</string>
   <string name="Tap0_register_SendEmailTips">Email gönderildi</string>
-  <string name="Tap0_register_VerificationTips">Etkinleştirme e&#8211;postası %s\'ya gönderildi, lütfen hesabınızı etkinleştirmek için bağlantıyı tıklayın.</string>
+  <string name="Tap0_register_VerificationTips">Etkinleştirme e&#45;postası %s\'ya gönderildi, lütfen hesabınızı etkinleştirmek için bağlantıyı tıklayın.</string>
   <string name="Tap0_wrongcode">Hata</string>
   <string name="Tap1_AddDeviceTips">Cihaz eklemek için\"+\"ya tıklayın</string>
   <string name="Tap1_AddDevice_CameraTipShort">Açıldıktan sonra WiFi tuşuna basın</string>
@@ -701,7 +705,7 @@
   <string name="Tap1_BigPic_FavoriteTips">\"Günlük Mükemmel\" içindeki resimleri topla</string>
   <string name="Tap1_CameraFun_Standby">Beklemede</string>
   <string name="Tap1_CameraFun_Standby_Description">Hazırda bekletmek için beklemeyi başlatın, bu durumda canlı izleme, geçmiş videoları kontrol etme, koruma ve alarm verme, otomatik kayıt, hızlandırılmış fotoğrafçılık vs. işlemler yapılamayacaktır.</string>
-  <string name="Tap1_CameraFun_Standby_OnTips">Time&#8211;lapse fotoğraf çekiliyor, bekleme modu açılamaz</string>
+  <string name="Tap1_CameraFun_Standby_OnTips">Time&#45;lapse fotoğraf çekiliyor, bekleme modu açılamaz</string>
   <string name="Tap1_CameraFun_Timelapse">Hızlandırılmış fotoğraf</string>
   <string name="Tap1_CameraFun_Timelapse_Countdown">Kalan süre</string>
   <string name="Tap1_CameraFun_Timelapse_EndButton">Bitir</string>
@@ -826,7 +830,7 @@
   <string name="Tap1_Update">Güncelleştir</string>
   <string name="Tap1_UpdateFirmwareTips">Güncelleştir kısa bir süre içinde başlayacak,lütfen cep telefonunun ve cihazının aynı WIFI ile bağlantı kurduğundan emin olun</string>
   <string name="Tap1_Update_Electricity">Düşük pil &lt;% 30, yükseltme başarısız, lütfen şarj edin ve tekrar deneyin.</string>
-  <string name="Tap1_Update_Precautions">Yükseltme yaklaşık 4&#8211;5 dakika sürer; yükseltme sırasında İnternet\'i kesmeyin veya cihazı kapatmayın.</string>
+  <string name="Tap1_Update_Precautions">Yükseltme yaklaşık 4&#45;5 dakika sürer; yükseltme sırasında İnternet\'i kesmeyin veya cihazı kapatmayın.</string>
   <string name="Tap1_device_deleted">Bu cihaz silindi</string>
   <string name="Tap1_iHome_Associate">Birleştir</string>
   <string name="Tap1_iHome_Associated">Ilişkili</string>
@@ -894,7 +898,7 @@
   <string name="Tap3_Friends_DeleteFriends">Emin silmek için？</string>
   <string name="Tap3_Friends_Details">Ayrıntıları</string>
   <string name="Tap3_Friends_Myaccount">Hesabım</string>
-  <string name="Tap3_Friends_NoBindTips">Bu işlevi kullanmak, önce e&#8211;postayı bağlamak zorundadır.</string>
+  <string name="Tap3_Friends_NoBindTips">Bu işlevi kullanmak, önce e&#45;postayı bağlamak zorundadır.</string>
   <string name="Tap3_Friends_Share">İle paylaş%s</string>
   <string name="Tap3_Friends_Tips">Yakın bize yapar arkadaş ekleyin</string>
   <string name="Tap3_Friends_UserInfo">Kişisel detaylar</string>
@@ -936,7 +940,7 @@
   <string name="Tap3_ShareDevice_Tips">Bu cihaz, herhangi bir daha fazla kullanıcı ile paylaşılamaz</string>
   <string name="Tap3_ShareDevice_ToContacts">Contacts ile paylaş</string>
   <string name="Tap3_ShareDevice_UnshareTips">Unshare?</string>
-  <string name="Tap3_Share_NoBindTips">Bu işlevi kullanmak, önce e&#8211;postayı bağlamak zorundadır.</string>
+  <string name="Tap3_Share_NoBindTips">Bu işlevi kullanmak, önce e&#45;postayı bağlamak zorundadır.</string>
   <string name="Tap3_TitleName">Beni</string>
   <string name="Tap3_TitleName_Notice">ihbar</string>
   <string name="Tap3_Uploading">Uploading&#8230;</string>
@@ -957,7 +961,6 @@
   <string name="Tips_Device_TimeoutRetry">Zaman aşımı, tekrar deneyin</string>
   <string name="Tips_ShortVideo">Kısa bir video kaydetmek için uzun basın</string>
   <string name="Tips_SureDelete">Emin silmek için？</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">Cevap yok, lütfen tekrar deneyiniz</string>
   <string name="UPDATE_FAIL">Kameraya bağlantı başarısız, lütfen tekrar deneyiniz.</string>
   <string name="UPDATING_BUTTON">Güncelleme</string>
@@ -973,6 +976,7 @@
   <string name="VIDEO_FirmwareUpdating">Firmware güncellemesi&#8230;</string>
   <string name="VIDEO_REFRESHING">YÜKLENİYOR</string>
   <string name="VIDEO_SD_DESC">Video bilgisi depolamak için SD kart başlatma gerekiyor</string>
+  <string name="Video_expired">Video yok, Belki süresi doldu</string>
   <string name="WARN_TIME">Uyarı süresi</string>
   <string name="WEB">Web sitesi</string>
   <string name="WED">Çarşamba</string>
@@ -998,13 +1002,13 @@
   <string name="WIFI_OFF">Telefonunuzda WIFI kapalı</string>
   <string name="WIFI_PWD">Şifre</string>
   <string name="WIFI_PWD_1">Şifre：</string>
-  <string name="WIFI_SET_2">1.Lütfen WIFI göstergesinin mavi yanıp söndüğünden emin olun. Değilse WIFI butonuna 3 sanie basın.\n2.\"Ayarlamalar\"&#8211;>\"WLAN\" aracılığıyla iPhone\'nuzdan %s e bağlanın, şifre 11111111</string>
-  <string name="WIFI_SET_3">Lütfen Ayarlamalar&#8211;>WLAN aracılığıyla DOG&#8211;**&#8211;****** u seçin , phone\'nuzdan katılın, Şifre 11111111</string>
-  <string name="WIFI_SET_3_1">Lütfen Ayarlamalar&#8211;>WLAN aracaılığıyla DOG&#8211;ML&#8211;****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
+  <string name="WIFI_SET_2">1.Lütfen WIFI göstergesinin mavi yanıp söndüğünden emin olun. Değilse WIFI butonuna 3 sanie basın.\n2.\"Ayarlamalar\"&#45;>\"WLAN\" aracılığıyla iPhone\'nuzdan %s e bağlanın, şifre 11111111</string>
+  <string name="WIFI_SET_3">Lütfen Ayarlamalar&#45;>WLAN aracılığıyla DOG&#45;**&#45;****** u seçin , phone\'nuzdan katılın, Şifre 11111111</string>
+  <string name="WIFI_SET_3_1">Lütfen Ayarlamalar&#45;>WLAN aracaılığıyla DOG&#45;ML&#45;****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
   <string name="WIFI_SET_4">%s e geri dön</string>
   <string name="WIFI_SET_5GTIPS">İpuçları:5Ghz WiFi sinyali şu an izinsiz</string>
-  <string name="WIFI_SET_RS">Lütfen Ayarlamalar&#8211;>WLAN aracaılığıyla RS&#8211;CAM&#8211;****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
-  <string name="WIFI_SET_VER">Lütfen Ayarlamalar&#8211;>WLAN aracaılığıyla %s yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
+  <string name="WIFI_SET_RS">Lütfen Ayarlamalar&#45;>WLAN aracaılığıyla RS&#45;CAM&#45;****** yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
+  <string name="WIFI_SET_VER">Lütfen Ayarlamalar&#45;>WLAN aracaılığıyla %s yi seçin, phone\'nuzdan katılın, şifre 11111111</string>
   <string name="WONDER_TODAY_H_M">Bugün HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Dün HH:mm</string>
   <string name="WeChat">WeChat</string>
@@ -1035,7 +1039,7 @@
   <string name="connecting_ap">Bağlanılıyor&#8230;</string>
   <string name="contacts_auth">İrtibatlar</string>
   <string name="copy">Kopyala</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005&#45;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\n bir telefon numarası olabilir, Yapabilecekleriniz:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
