--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -61,7 +61,7 @@
   <string name="CHARGING">Đang sạc</string>
   <string name="CHOOSE">Chọn</string>
   <string name="CHOOSE_COVER">Chọn bìa</string>
-  <string name="CHOOSE_NETWORK">Cài đặt &#8211; Chọn mạng</string>
+  <string name="CHOOSE_NETWORK">Cài đặt &#45; Chọn mạng</string>
   <string name="CHOOSE_PHOTOS">Chọn từ Hình ảnh</string>
   <string name="CHOOSE_PIC">Xác định người dùng</string>
   <string name="CHOOSE_WIFI">Chọn mạng</string>
@@ -116,9 +116,9 @@
   <string name="DEVICES_TITLE_2">Tìm thiết bi</string>
   <string name="DEVICES_TITLE_3">Cài WiFi</string>
   <string name="DEVICES_TITLE_4">Thêm</string>
-  <string name="DEVICE_2G_ONLINE">2G&#8211;Online</string>
-  <string name="DEVICE_3G_ONLINE">3G&#8211;Online</string>
-  <string name="DEVICE_4G_ONLINE">4G&#8211;Online</string>
+  <string name="DEVICE_2G_ONLINE">2G&#45;Online</string>
+  <string name="DEVICE_3G_ONLINE">3G&#45;Online</string>
+  <string name="DEVICE_4G_ONLINE">4G&#45;Online</string>
   <string name="DEVICE_ADDING">Đang thêm, hãy đợi&#8230;</string>
   <string name="DEVICE_BLUETOOTH_ONLINE">Đã kết nối Bluetooth</string>
   <string name="DEVICE_CONNECTING">Thiết bị đang kết nối Internet</string>
@@ -133,7 +133,7 @@
   <string name="DEVICE_OFFLINE7">Vui lòng kết nối thiết bị điểm nóng</string>
   <string name="DEVICE_UPGRADE">Nâng cấp thiết bị</string>
   <string name="DEVICE_UPGRADE_TIPS">Các thiết bị cần phải được bật để cập nhật phần mềm.</string>
-  <string name="DEVICE_WIFI_ONLINE">WiFi&#8211;Online</string>
+  <string name="DEVICE_WIFI_ONLINE">WiFi&#45;Online</string>
   <string name="DEViCE_NAME">Tên thiết bị không có</string>
   <string name="DIRECTION_180">Đảo hình (xoay 180 độ)</string>
   <string name="DIRECTION_NORMAL">Bình thường</string>
@@ -211,7 +211,7 @@
   <string name="EMAIL_1">Email</string>
   <string name="EMAIL_2">Email không tồn tại</string>
   <string name="EMAIL_RESET_PWD">Đã gửi email đến %s, hãy nhấn vào liên kết để tạo lại mật khẩu</string>
-  <string name="EMAIL_SIGNUP">E&#8211;mail</string>
+  <string name="EMAIL_SIGNUP">E&#45;mail</string>
   <string name="END_TALKBACK">Kết thúc nói chuyện</string>
   <string name="ENTER_CODE">Mã xác thực</string>
   <string name="ENTER_PWD">Xác nhận mật khẩu mới</string>
@@ -277,8 +277,8 @@
   <string name="IMAGE_ERR">Tải lên lỗi, kích thước ảnh quá lớn</string>
   <string name="INVALID_ACCOUNT">Tài khoản không tồn tại</string>
   <string name="INVALID_CODE">Mã không tồn tại</string>
-  <string name="IN_APP_SOUND">In&#8211;APP báo âm thanh</string>
-  <string name="IN_APP_VIBRATE">In&#8211;APP báo rung</string>
+  <string name="IN_APP_SOUND">In&#45;APP báo âm thanh</string>
+  <string name="IN_APP_VIBRATE">In&#45;APP báo rung</string>
   <string name="IP_Address">địa chỉ IP</string>
   <string name="I_KNOW">OK</string>
   <string name="Instructions_Sent">Đã gửi hướng dẫn</string>
@@ -304,7 +304,7 @@
   <string name="LIGTH_LABEL_2_2">Đèn xanh, đang có nguồn</string>
   <string name="LIVE_DATA">Đối với cellular, hãy lưu ý việc sử dụng dữ liệu của bạn</string>
   <string name="LOADING">Đang tải&#8230;</string>
-  <string name="LOCAL_NOTIFICATION_AndroidMSG">Trong mục Cài Đặt&#8211;Thông báo trên Phone, tìm %s mở \'Thông báo\'</string>
+  <string name="LOCAL_NOTIFICATION_AndroidMSG">Trong mục Cài Đặt&#45;Thông báo trên Phone, tìm %s mở \'Thông báo\'</string>
   <string name="LOCATION">Khu vực</string>
   <string name="LOCATION_1">Tên</string>
   <string name="LOCATION_NAME">Khu vực:</string>
@@ -328,6 +328,7 @@
   <string name="MAGNETISM_ON_PUSH">%s mở</string>
   <string name="MESSAGE">Tin nhắn</string>
   <string name="MINUTE">M</string>
+  <string name="MINUTE_Cloud">Phút</string>
   <string name="MOBILE_DATA">mạng dữ liệu di động</string>
   <string name="MOBILE_TIPS">Khi bật tính năng này, thiết bị sẽ ưu tiên sử dụng sóng 3G/4G thay vì WiFi</string>
   <string name="MODEL">Model</string>
@@ -390,7 +391,8 @@
   <string name="OFF">Tắt</string>
   <string name="OFFLINE_ERR">Thiết bị Offline</string>
   <string name="OFFLINE_ERR_1">Chưa kết nối Internet</string>
-  <string name="OFF_LINE">Off&#8211;line</string>
+  <string name="OFFLINE_EXPLAIN">Ngoại tuyến</string>
+  <string name="OFF_LINE">Off&#45;line</string>
   <string name="OK">OK</string>
   <string name="ON">Bật</string>
   <string name="OPEN">Mở</string>
@@ -416,8 +418,8 @@
   <string name="PLEASE_WAIT_1">Hãy đợi&#8230;</string>
   <string name="PLEASE_WAIT_2">Đang thêm, hãy đợi&#8230;</string>
   <string name="PROFILE_PHOTO">Hồ sơ</string>
-  <string name="PULL_TO_LOAD">Kéo&#8211;để&#8211;tải</string>
-  <string name="PULL_TO_REFRESH">Kéo&#8211;làm&#8211;mới</string>
+  <string name="PULL_TO_LOAD">Kéo&#45;để&#45;tải</string>
+  <string name="PULL_TO_REFRESH">Kéo&#45;làm&#45;mới</string>
   <string name="PUSH_MSG">Thông báo hệ thống</string>
   <string name="PWD_CHANGED">Mật khẩu đã sửa, hãy đăng nhập lại</string>
   <string name="PWD_ERR">Mật khẩu không tồn tại</string>
@@ -451,12 +453,13 @@
   <string name="REFRESH">Làm mới</string>
   <string name="REFRESHING">Làm mới</string>
   <string name="REGISTERED">Tài khoản đã đăng ký rồi</string>
-  <string name="RELEASE_TO_LOAD">Buông&#8211;để&#8211;tải</string>
-  <string name="RELEASE_TO_REFRESH">Buông&#8211;để&#8211;làm&#8211;mới</string>
+  <string name="RELEASE_TO_LOAD">Buông&#45;để&#45;tải</string>
+  <string name="RELEASE_TO_REFRESH">Buông&#45;để&#45;làm&#45;mới</string>
   <string name="REMAIN_SPACE">%s GB sử dụng</string>
   <string name="REPEAT">Lặp lại hàng tuần</string>
   <string name="REPEAT_PLAY">Lặp lại</string>
   <string name="REPEAT_TIME">giây</string>
+  <string name="REPEAT_TIME_ALARM">giây</string>
   <string name="RESET_PWD">Thiết lập lại mật khẩu</string>
   <string name="RET_EALIAS_EXIST">Tên đã tồn tại</string>
   <string name="RET_EBINDCID_IN_BINDING">CID đã gắn</string>
@@ -539,6 +542,7 @@
   <string name="SECOND">%d giây</string>
   <string name="SECURE">Bảo vệ</string>
   <string name="SECURE_ALARM_CLOSE">Bạn cài đặt \"Phát hiện bất thường\", khi bạn tắt \"Phát hiện chuyển động\", sẽ không thể ghi hình</string>
+  <string name="SECURE_Interval_Alarm">Báo động Khoảng cách</string>
   <string name="SECURE_SENSITIVITY">Độ nhạy</string>
   <string name="SECURE_TYPE">Phát hiện chuyển động</string>
   <string name="SEE_HELP">Trợ giúp</string>
@@ -701,8 +705,8 @@
   <string name="Tap1_BigPic_FavoriteTips">Sưu tập hình trong mục \"My Favorite \"</string>
   <string name="Tap1_CameraFun_Standby">Standby</string>
   <string name="Tap1_CameraFun_Standby_Description">Từ Standby chuyển sang Hibernate sẽ không thể thực hiện hoạt động gì nữa</string>
-  <string name="Tap1_CameraFun_Standby_OnTips">Đang chụp Time&#8211;lapse, không thể chuyển sang Standby</string>
-  <string name="Tap1_CameraFun_Timelapse">Ảnh Time&#8211;lapse</string>
+  <string name="Tap1_CameraFun_Standby_OnTips">Đang chụp Time&#45;lapse, không thể chuyển sang Standby</string>
+  <string name="Tap1_CameraFun_Timelapse">Ảnh Time&#45;lapse</string>
   <string name="Tap1_CameraFun_Timelapse_Countdown">Thời gian còn lại</string>
   <string name="Tap1_CameraFun_Timelapse_EndButton">Kết thúc</string>
   <string name="Tap1_CameraFun_Timelapse_End_FailTips">Không đủ để nối, kết thúc ghi hình sẽ không có gì</string>
@@ -713,19 +717,19 @@
   <string name="Tap1_CameraFun_Timelapse_GoWatch">Xem</string>
   <string name="Tap1_CameraFun_Timelapse_Interval">Khoảng chờ</string>
   <string name="Tap1_CameraFun_Timelapse_NotStart">Đang đến</string>
-  <string name="Tap1_CameraFun_Timelapse_OnTips">Time&#8211;lapse sẽ tự động tắt khi chụp xong và lưu vào\"My Favorite \"</string>
+  <string name="Tap1_CameraFun_Timelapse_OnTips">Time&#45;lapse sẽ tự động tắt khi chụp xong và lưu vào\"My Favorite \"</string>
   <string name="Tap1_CameraFun_Timelapse_RecordTime">Thời gian chụp</string>
   <string name="Tap1_CameraFun_Timelapse_Setting">Bắn súng</string>
-  <string name="Tap1_CameraFun_Timelapse_StandbyTips">Bắt đầu time&#8211;lapse trước khi đóng Standby</string>
+  <string name="Tap1_CameraFun_Timelapse_StandbyTips">Bắt đầu time&#45;lapse trước khi đóng Standby</string>
   <string name="Tap1_CameraFun_Timelapse_Start">Bắt đầu bây giờ</string>
   <string name="Tap1_CameraFun_Timelapse_StartTime">Thời gian bắt đầu</string>
   <string name="Tap1_CameraFun_Timelapse_StartTimeFail">Đặt sớm hơn thời gian hiện tại, hãy cài đặt lại</string>
   <string name="Tap1_CameraFun_Timelapse_Startnow">Bắt đầu bây giờ</string>
   <string name="Tap1_CameraFun_Timelapse_Synthesis">Đang nối lại</string>
   <string name="Tap1_CameraFun_Timelapse_SynthesisTips">Nối thành công, hãy kiểm tra trong \"My Favorite \"</string>
-  <string name="Tap1_CameraFun_Timelapse_Tips">Cần tắt Standby trước khi chụp time&#8211;lapse, bạn chắc không?</string>
+  <string name="Tap1_CameraFun_Timelapse_Tips">Cần tắt Standby trước khi chụp time&#45;lapse, bạn chắc không?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Chắc</string>
-  <string name="Tap1_CameraFun_Timelapse_document">Ghi giữ thêm khoảnh khắc với tính năng Time&#8211;lapse</string>
+  <string name="Tap1_CameraFun_Timelapse_document">Ghi giữ thêm khoảnh khắc với tính năng Time&#45;lapse</string>
   <string name="Tap1_CameraFun_Timelapse_hours">%giờ</string>
   <string name="Tap1_CameraFun_UninitializedTips">Lỗi đọc thẻ nhớ SD</string>
   <string name="Tap1_CameraFun_VideoDirection">Đảo chiều</string>
@@ -826,7 +830,7 @@
   <string name="Tap1_Update">cập nhật</string>
   <string name="Tap1_UpdateFirmwareTips">Cập nhật sẽ bắt đầu trong thời gian ngắn,hãy đảm bảo rằng điện thoại di động và các thiết bị đang kết nối với WIFI cùng</string>
   <string name="Tap1_Update_Electricity">Pin yếu &lt;30%, nâng cấp không thành công, hãy sạc lại và thử lại</string>
-  <string name="Tap1_Update_Precautions">Nâng cấp mất khoảng 4&#8211;5 phút, không cắt mạng Internet hoặc tắt thiết bị khi nâng cấp.</string>
+  <string name="Tap1_Update_Precautions">Nâng cấp mất khoảng 4&#45;5 phút, không cắt mạng Internet hoặc tắt thiết bị khi nâng cấp.</string>
   <string name="Tap1_device_deleted">Thiết bị đã bị xoá</string>
   <string name="Tap1_iHome_Associate">Kết hợp</string>
   <string name="Tap1_iHome_Associated">Associated</string>
@@ -847,13 +851,13 @@
   <string name="Tap2_Share_Moments">Moments</string>
   <string name="Tap2_Share_Wechat">Wechat</string>
   <string name="Tap2_Timelapse_Alarmimages">Hình ảnh báo động</string>
-  <string name="Tap2_Timelapse_fail">Video time&#8211;lapse không thể tạo được do mất kết nối</string>
+  <string name="Tap2_Timelapse_fail">Video time&#45;lapse không thể tạo được do mất kết nối</string>
   <string name="Tap2_Timelapse_screenshot">Chụp trực tuyến</string>
-  <string name="Tap2_Timelapse_title">Ảnh Time&#8211;lapse</string>
+  <string name="Tap2_Timelapse_title">Ảnh Time&#45;lapse</string>
   <string name="Tap2_TitleName">My Favorite</string>
   <string name="Tap2_TitleName_Sentence">My Favorite</string>
   <string name="Tap2_share_sharevideo">Tôi đã chia sẻ một video với bạn</string>
-  <string name="Tap2_share_sharevideo_tips">Tôi đã tạo 1 ảnh time&#8211;lapse từ Cleverdog, hãy xem nào!</string>
+  <string name="Tap2_share_sharevideo_tips">Tôi đã tạo 1 ảnh time&#45;lapse từ Cleverdog, hãy xem nào!</string>
   <string name="Tap2_share_unabletoshare">Chưa cài Wechat, không thể chia sẻ</string>
   <string name="Tap3_Added">Added</string>
   <string name="Tap3_ChangePassword">Mật khẩu bản gốc</string>
@@ -957,7 +961,6 @@
   <string name="Tips_Device_TimeoutRetry">Timeout, hãy thử lại</string>
   <string name="Tips_ShortVideo">Bấm dài để ghi lại một đoạn video ngắn</string>
   <string name="Tips_SureDelete">Chắc chắn để delete?</string>
-  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">Không phản hồi, hãy thử lại</string>
   <string name="UPDATE_FAIL">Lỗi kết nối camera, hãy thử lại</string>
   <string name="UPDATING_BUTTON">Đang cập nhật</string>
@@ -973,6 +976,7 @@
   <string name="VIDEO_FirmwareUpdating">Cập nhật firmware&#8230;</string>
   <string name="VIDEO_REFRESHING">ĐANG TẢI</string>
   <string name="VIDEO_SD_DESC">Cần định dạng thẻ nhớ để có thể lưu hình vào</string>
+  <string name="Video_expired">Video không tồn tại, Có thể đã hết hạn</string>
   <string name="WARN_TIME">Thời gian cảnh báo</string>
   <string name="WEB">Website</string>
   <string name="WED">Thứ tư</string>
@@ -998,13 +1002,13 @@
   <string name="WIFI_OFF">WiFi trên điện thoại đã tắt</string>
   <string name="WIFI_PWD">Mật mã</string>
   <string name="WIFI_PWD_1">Mật mã:</string>
-  <string name="WIFI_SET_2">1.Please đảm bảo các chỉ số WIFI là blinking.If xanh không, xin vui lòng nhấn vào nút WIFI 3 giây \ n2.Via \"Settings\" &#8211;.> \"WLAN\" trên iPhone của bạn, kết nối với \"%s\", mật khẩu 11111111</string>
-  <string name="WIFI_SET_3">Trong mục \"Cài đặt\"&#8211;>\"WLAN\", chọn \"DOG&#8211;**&#8211;*****\" kết nối phone, Mật khẩu 11111111</string>
-  <string name="WIFI_SET_3_1">Trong mục \"Cài đặt\"&#8211;>\"WLAN\", chọn \"DOG&#8211;ML&#8211;*****\" kết nối iPhone, Mật khẩu 11111111</string>
+  <string name="WIFI_SET_2">1.Please đảm bảo các chỉ số WIFI là blinking.If xanh không, xin vui lòng nhấn vào nút WIFI 3 giây \ n2.Via \"Settings\" &#45;.> \"WLAN\" trên iPhone của bạn, kết nối với \"%s\", mật khẩu 11111111</string>
+  <string name="WIFI_SET_3">Trong mục \"Cài đặt\"&#45;>\"WLAN\", chọn \"DOG&#45;**&#45;*****\" kết nối phone, Mật khẩu 11111111</string>
+  <string name="WIFI_SET_3_1">Trong mục \"Cài đặt\"&#45;>\"WLAN\", chọn \"DOG&#45;ML&#45;*****\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WIFI_SET_4">Trở lại %s</string>
   <string name="WIFI_SET_5GTIPS">Lưu ý:5G WiFi chưa được bật</string>
-  <string name="WIFI_SET_RS">Trong mục \"Cài đặt\"&#8211;>\"WLAN\", chọn \"RS&#8211;CAM&#8211;*****\" kết nối iPhone, Mật khẩu 11111111</string>
-  <string name="WIFI_SET_VER">Trong mục \"Cài đặt\"&#8211;>\"WLAN\", chọn \"%s\" kết nối iPhone, Mật khẩu 11111111</string>
+  <string name="WIFI_SET_RS">Trong mục \"Cài đặt\"&#45;>\"WLAN\", chọn \"RS&#45;CAM&#45;*****\" kết nối iPhone, Mật khẩu 11111111</string>
+  <string name="WIFI_SET_VER">Trong mục \"Cài đặt\"&#45;>\"WLAN\", chọn \"%s\" kết nối iPhone, Mật khẩu 11111111</string>
   <string name="WONDER_TODAY_H_M">Hôm nay HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">Hôm qua HH:mm</string>
   <string name="WeChat">WeChat</string>
@@ -1035,7 +1039,7 @@
   <string name="connecting_ap">Đang kết nối&#8230;</string>
   <string name="contacts_auth">Liên hệ</string>
   <string name="copy">Sao chép</string>
-  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005&#45;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\nlà một số điện thoại, bạn có thể:</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
